infra/monitoring/prod/k8s-infra-apps/eck/eck.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    service.alpha.kubernetes.io/app-protocols: '{"https":"HTTPS"}'
  name: logs-es-http
spec:
  ingressClassName: nginx
  rules:
  - host: es.mon.tucana.sibel.health
    http:
      paths:
      - backend:
          service:
            name: logs-es-http
            port:
              name: https
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - es.mon.tucana.sibel.health
    secretName: es-mon-tucana-sibel-health-tls
